--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=DESKTOP-8F3G0DT\\SQLEXPRESS;Initial Catalog=MemberDB;User ID=sa;Password=abcd1234"
+    "SqlConnection": "Data Source=127.0.0.1,1433;Initial Catalog=MemberDB;User ID=sa;Password=abcd1234@"
   }
 }
