feat: change version

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlConnection": "Data Source=127.0.0.1,1433;Initial Catalog=MemberDB;User ID=sa;Password=abcd1234@"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:59921",
+    "Secret": "StrONGKAutHENTICATIONKEy"
   }
 }
